Fix Windows build warning LNK4217 for blink_platform.dll.

[1] third_party/WebKit/public:offscreen_canvas_mojo_bindings_blink
  ==> [2] cc/ipc:interfaces_blink
    ==> [3] gpu/ipc/common:interfaces_blink
The above three targets are all linked into blink_platform.dll,
but [2] and [3] use gfx.mojom.Size typemap defined in
third_party/WebKit/Source/platform/mojo/GeometryStructTraits.{cpp,h},
which is exported from bink_platform.dll.
Thus, generated C++ bindings of [2] and [3] include GeometryStructTraits.h
while themselves are part of blink_platform.dll, means they are
importing(dllimport) local defined symbols marked as dllexport, caused LNK4217.

This CL moves this struct traits to a separate source_set target,
instead of exporting it from blink_platform.dll.

BUG=654776,669352
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2574593003
Cr-Commit-Position: refs/heads/master@{#443994}

Former-commit-id: 4724c1ac34d346dd8b44c4abc33b344a744a2d69